# cookbook

backend/: Dockerfile  firebase.py  main.py  poetry.lock.bak  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/models/: category.py  recipe.py
backend/app/routes/: category_handler.py  delete_handler.py  get_handler.py  patch_handler.py  post_handler.py  recipe_handler.py
backend/app/utils/: auth.py  firebase.py
frontend/: index.html  package-lock.json  package.json
frontend/.railway/: service.json
frontend/src/: App.tsx  api.ts  firebase.ts  main.tsx  theme.ts
frontend/src/api/: axios.ts  categories.ts  recipes.ts
frontend/src/components/: RecipeCard.tsx  RecipeFilter.tsx
frontend/src/components/UI/: Button.tsx  Checkbox.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/layout/: CategoryNavbar.tsx  Divider.tsx  Footer.tsx  Hero.tsx  Layout.tsx  Navbar.tsx  SearchBar.tsx
frontend/src/hooks/: useRecipes.ts
frontend/src/pages/: AddRecipe.tsx  AllRecipes.tsx  Categories.tsx  CategoryDetail.tsx  EditRecipe.tsx  Home.tsx  Login.tsx  RecipeDetail.tsx
frontend/src/services/: cloudinary.ts
